# alif_tinyusb-examples_dev

./: .gitignore  .gitmodules  README.md  alif.cbuild-pack.yml  alif.csolution.yaml  alif.csolution.yml  cdefault.yml  vcpkg-configuration.json
device/ensemble/: alif-ensemble.clayer.yml
examples/: alif-common-app-utils.clayer.yml  alif-ensemble.clayer.yaml  alif-tinyusb-cdc.clayer.yml  alif-tinyusb-dcd.clayer.yml  alif-tinyusb-hcd.clayer.yml  alif-tinyusb.clayer.yml  freertos.clayer.yaml  tinyusb_alif.clayer.yaml  west.yml
examples/device/audio_test/: CMakeLists.txt  dcd_ensemble_isoc_buffers.h  device_audio_test.cproject.yml
examples/device/audio_test/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/audio_test/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/audio_test/RTE/_release_E7-HE/: RTE_Components.h
examples/device/audio_test/RTE/_release_E7-HP/: RTE_Components.h
examples/device/audio_test/src/: audio_device.c  audio_device.h  main.c  plot_audio_samples.py  tusb_config.h
examples/device/audio_test_freertos/: device_audio_test_freertos.cproject.yml
examples/device/audio_test_freertos/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/audio_test_freertos/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/audio_test_freertos/RTE/_release_E7-HE/: RTE_Components.h
examples/device/audio_test_freertos/RTE/_release_E7-HP/: RTE_Components.h
examples/device/audio_test_freertos/src/: main.c  tusb_config.h
examples/device/audio_test_zephyr/: CMakeLists.txt
examples/device/audio_test_zephyr/cmake/: family_support.cmake  tinyusb_sources.cmake
examples/device/audio_test_zephyr/src/: main.c  tusb_config.h
examples/device/cdc_msc/: CMakeLists.txt  device_cdc_msc.cproject.yaml  device_cdc_msc.cproject.yml
examples/device/cdc_msc/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/cdc_msc/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/cdc_msc/RTE/_release_E7-HE/: RTE_Components.h
examples/device/cdc_msc/RTE/_release_E7-HP/: RTE_Components.h
examples/device/cdc_msc_freertos/: CMakeLists.txt  device_cdc_msc_freertos.cproject.yaml  device_cdc_msc_freertos.cproject.yml
examples/device/cdc_msc_freertos/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/cdc_msc_freertos/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/cdc_msc_freertos/RTE/_release_E7-HE/: RTE_Components.h
examples/device/cdc_msc_freertos/RTE/_release_E7-HP/: RTE_Components.h
examples/device/cdc_msc_zephyr/: CMakeLists.txt
examples/device/cdc_msc_zephyr/src/: main.c  tusb_config.h
examples/device/hid_boot_interface/: CMakeLists.txt  device_hid_boot_interface.cproject.yaml  device_hid_boot_interface.cproject.yml
examples/device/hid_boot_interface/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/hid_boot_interface/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/hid_boot_interface/RTE/_release_E7-HE/: RTE_Components.h
examples/device/hid_boot_interface/RTE/_release_E7-HP/: RTE_Components.h
examples/device/hid_composite/: CMakeLists.txt  device_hid_composite.cproject.yaml  device_hid_composite.cproject.yml
examples/device/hid_composite/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/hid_composite/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/hid_composite/RTE/_release_E7-HE/: RTE_Components.h
examples/device/hid_composite/RTE/_release_E7-HP/: RTE_Components.h
examples/device/hid_composite_freertos/: CMakeLists.txt  device_hid_composite_freertos.cproject.yaml  device_hid_composite_freertos.cproject.yml
examples/device/hid_composite_freertos/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/hid_composite_freertos/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/hid_composite_freertos/RTE/_release_E7-HE/: RTE_Components.h
examples/device/hid_composite_freertos/RTE/_release_E7-HP/: RTE_Components.h
examples/device/hid_composite_zephyr/: CMakeLists.txt
examples/device/hid_composite_zephyr/src/: main.c  tusb_config.h
examples/device/hid_multiple_interface/: CMakeLists.txt  device_hid_multiple_interface.cproject.yaml  device_hid_multiple_interface.cproject.yml
examples/device/hid_multiple_interface/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/hid_multiple_interface/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/msc_dual_lun/: CMakeLists.txt  device_msc_dual_lun.cproject.yaml  device_msc_dual_lun.cproject.yml
examples/device/net_lwip_webserver/: CMakeLists.txt  device_net_lwip_webserver.cproject.yaml  device_net_lwip_webserver.cproject.yml
examples/device/net_lwip_webserver_freertos/: CMakeLists.txt  device_net_lwip_webserver_freertos.cproject.yaml  device_net_lwip_webserver_freertos.cproject.yml
examples/device/net_lwip_webserver_zephyr/: CMakeLists.txt
examples/device/net_lwip_webserver_zephyr/src/: inet_chksum.c
examples/device/video_capture/: CMakeLists.txt  dcd_ensemble_isoc_buffers.h  device_video_capture.cproject.yml
examples/device/video_capture/RTE/_debug_E7-HE/: RTE_Components.h
examples/device/video_capture/RTE/_debug_E7-HP/: RTE_Components.h
examples/device/video_capture/RTE/_release_E7-HE/: RTE_Components.h
examples/device/video_capture/RTE/_release_E7-HP/: RTE_Components.h
examples/device/video_capture/src/: main.c
examples/device/video_capture_freertos/: device_video_capture_freertos.cproject.yml
examples/device/video_capture_freertos/src/: main.c  tusb_config.h
examples/device/video_capture_zephyr/: CMakeLists.txt  prj.conf
examples/device/video_capture_zephyr/src/: main.c  tusb_config.h  usb_descriptors.c
examples/host/cdc_msc_hid/: host_cdc_msc_hid.cproject.yaml  host_cdc_msc_hid.cproject.yml
examples/host/cdc_msc_hid/src/: msc_app.c
examples/host/device_info/: host_device_info.cproject.yaml  host_device_info.cproject.yml
examples/host/device_info/src/: main.c
examples/host/msc_file_explorer/: host_msc_file_explorer.cproject.yaml  host_msc_file_explorer.cproject.yml
examples/host/msc_file_explorer/src/: msc_app.c
freertos/RTE/RTOS/: FreeRTOSConfig.h
(+31 files in other folders)
